[FIX] Remove fixed position from installer sidebar because it is not responsive

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -4382,9 +4382,6 @@ h2:hover .heading-link, h3:hover .heading-link, h4:hover .heading-link, h5:hover
     text-decoration: underline; }
   #tiki-installer .sidebar {
     margin: 1.5em 1.5em 0 0; }
-  @media (min-height: 700px) {
-  #tiki-installer .sidebar {
-    position: fixed; } }
   #tiki-installer .installer-content {
     background-color: white;
     min-height: 100vh;
