--- a/themes/base_files/scss/_tiki-installer.scss
+++ b/themes/base_files/scss/_tiki-installer.scss
@@ -18,12 +18,6 @@
         margin: 1.5em 1.5em 0 0;
     }
 
-    @media(min-height: 700px) {
-        .sidebar {
-            position: fixed;
-        }
-    }
-
     .installer-content {
         background-color: white;
         min-height: 100vh;
